--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "responsive portfolio website",
   "main": "index.js",
-  "homepage":"https://abdulmuneerahmed.github.io/portifolio",
+  "homepage":"https://abdulmuneerahmed.github.io/portfolio.github.io",
   "scripts": {
     "sass": "node-sass -w scss/ -o dist/css/ --recursive",
-    "deploy":"gh-pages -d dist"
+    "deploy": "gh-pages -d dist"
   },
   "author": "Muneer",
   "license": "ISC",
