--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage":"https://abdulmuneerahmed.github.io/portfolio.github.io",
   "scripts": {
     "sass": "node-sass -w scss/ -o dist/css/ --recursive",
-    "deploy": "gh-pages -d dist/index.html"
+    "deploy": "gh-pages -d dist"
   },
   "author": "Muneer",
   "license": "ISC",
